package hmi;
public class HmiOutput { /* TODO */ }
