package power;

public class PowerControl {
    public void increaseLevel(int zoneId) {
        // TODO: Logik zur Leistungsanhebung
    }
}
